# TensorRT

demo/BERT/: README.md  benchmark.sh  build_infer.sh  builder_varseqlen.py  builder_varseqlen_qdq.py  builder_varseqlen_qdq_sklnint8.py  inference_varseqlen.py
demo/BERT/plugin/: CMakeLists.txt  spmmPlugin.cpp  spmmPlugin.h
docker/: launch.sh  ubuntu-18.04.Dockerfile
